--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,7 +1,8 @@
 name: Deploy to GithubPages
 
 on: push
-
+permissions:
+  contents: write
 jobs:
   deploy-to-gh-pages:
     runs-on: ubuntu-latest
