--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "lint-staged": "^13.2.3",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.1",
